Fix filter bar on smaller screens

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  min-width: 450px;
+  min-width: 350px;
 }
 
 .dropdown-item .no-icon {
